src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_starts_with.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
assert(starts_with("asdf", "a"))
assert(not starts_with("asdf", "b"))

assert(starts_with("😂 lol", "😂"))
assert(not starts_with("hi 😂 lol", "😂"))
}

OK
Nil
