src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_trim.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
assert_eq(trim("\n\n\r\tasdf\t\n"), "asdf")
assert_eq(trim("\n\n\r\tasdf"), "asdf")
assert_eq(trim("asdf\t\n"), "asdf")
}

OK
Nil
