src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__table_set_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = {}
let k = "a"
v[k] = 100
v[k]



OK
Int(100)
