src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__table_use.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = {a:0, b:1, c:2}
v["a"] + v["b"] + v["c"]


OK
Int(3)
