src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__table_use_var.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = {a:100}
let k = "a"
v[k]
}

OK
Int(100)
