src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__to_float.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print(to_float(100))
}

OK
Nil

STDOUT
100.0
