src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__to_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
print(to_int(3.14))
}

OK
Nil

STDOUT
3
